# coolrl

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  hello.py  pyproject.toml  setup.py
.github/workflows/: deploy.yml
configs/: lost_cities_deep_cfr_capped_rollout300.yaml  lost_cities_deep_cfr_cutoff_random_rollout.yaml  lost_cities_deep_cfr_diagnostic_depth16_nodes20k.yaml  lost_cities_deep_cfr_overnight.yaml  lost_cities_deep_cfr_probe.yaml  lost_cities_deep_cfr_pure_self_play_a.yaml  lost_cities_deep_cfr_pure_self_play_b.yaml  lost_cities_deep_cfr_safe_br_pretrained.yaml  lost_cities_deep_cfr_safe_br_zero_unsampled.yaml  lost_cities_deep_cfr_safe_dagger_256.yaml  lost_cities_deep_cfr_safe_dagger_512.yaml  lost_cities_deep_cfr_safe_pretrain_512.yaml  lost_cities_deep_cfr_safe_rollout300.yaml  lost_cities_deep_cfr_safe_rollout300_clip500.yaml  lost_cities_deep_cfr_safe_rollout300_eps02_t500_clip500.yaml  lost_cities_deep_cfr_safe_rollout300_eps05.yaml  lost_cities_deep_cfr_safe_rollout300_safe_opponent.yaml  lost_cities_deep_cfr_safe_rollout300_t500.yaml  lost_cities_deep_cfr_safe_rollout300_zero_unsampled.yaml  lost_cities_deep_cfr_small_run.yaml  lost_cities_deep_cfr_tier3.yaml  lost_cities_tier1.yaml  omok15_full_cuda.yaml  omok15_full_cuda_hdd.yaml  omok15_quick.yaml  omok15_smoke.yaml  omok_full.yaml  omok_full_cuda.yaml  omok_full_metal.yaml  omok_quick.yaml  omok_quick_c_test.yaml  omok_quick_rust_test.yaml  omok_smoke.yaml  omok_test_cuda_gpu.yaml  omok_test_cuda_hybrid.yaml
configs/lost_cities/deep_cfr_pure_self_play_zero_pit_poc_eps1e3/: README.md  config.yaml
configs/lost_cities/deep_cfr_pure_self_play_zero_pit_poc_eps1e4/: README.md  analyze.py
docs/: lost-cities-deep-cfr-rollout-cutoff-experiment.md  lost-cities-deep-cfr-training-notes.md  lost-cities-deep-cfr-worker-benchmark-notes.md  lost-cities-plan-step1.md  omok-ai-weakening-proposal.md  omok-dynamic-board-size.md  omok-mcts-memory.md  omok-web-ios-memory.md  omok_cuda_tuning.md  pytorch-migration.md  setup.md  tinygrad_batch_bucketing.md
docs/archive/: README.md
docs/archive/lost-cities-deep-cfr/: rollout-cutoff-experiment.md  training-notes.md  worker-benchmark-notes.md
docs/archive/omok/: dynamic-board-size.md  pytorch-migration.md  tinygrad-batch-bucketing.md  web-ios-memory.md
docs/lost-cities-pure-rl/: README.md  eval-a-2h-checkpoints.json  eval-a-2h.json  progress.md
docs/lost-cities-safe-generalization/: README.md
docs/lost-cities-zero-pit-poc/: README.md
docs/omok/: README.md  board-size.md  getting-started.md  omok15-full-cuda-hdd-run.md  performance.md  play.md  training.md
experiments/lost_cities/deep_cfr_encoding_selectivity_review/: README.md  report.md
experiments/lost_cities/deep_cfr_pure_self_play_zero_pit_poc_eps1e3/: README.md  analyze.py  plan.md  progress.md  report.json  report.md  zero_pit_summary.md
experiments/lost_cities/deep_cfr_pure_self_play_zero_pit_poc_eps1e4/: README.md  analyze.py  config.yaml  plan.md  progress.md  report.json  report.md
experiments/lost_cities/deep_cfr_pure_self_play_zero_pit_poc_full_depth/: README.md  analyze.py  config.yaml  plan.md  progress.md  report.json  report.md
experiments/lost_cities/deep_cfr_pure_self_play_zero_pit_poc_full_depth_anchor_safe015/: README.md  analyze.py  config.yaml  plan.md  progress.md  report.json  report.md
experiments/lost_cities/deep_cfr_pure_self_play_zero_pit_poc_full_depth_derived_playability/: README.md  analyze.py  config.yaml  plan.md  progress.md  report.json  report.md
experiments/lost_cities/deep_cfr_pure_self_play_zero_pit_poc_full_depth_slot_aware_playability/: README.md  analyze.py  config.yaml  plan.md  progress.md  report.json  report.md
experiments/lost_cities/expedition_score_diagnostic/: README.md  diagnose.py
experiments/lost_cities/safe_heuristic_behavior_diagnostic/: README.md  diagnose.py  report.json  report.md
scripts/: bench_omok_evaluator.py  check_omok_torch_parity.py
src/coolrl/: progress.py
src/coolrl/dev/: __init__.py  check_doc_links.py
src/coolrl/kuhn_poker/: tabular_cfr.md  tabular_cfr.py
src/coolrl/lost_cities/: README.md  __init__.py  bots.py  env.py  evaluation.py  game.py  game.pyx  gui_models.py  pygame_common.py  pygame_pvp.py  tui.py
src/coolrl/lost_cities/backends/: python.py  rust.py
src/coolrl/lost_cities/bots/: __init__.py  heuristic.py  registry.py
src/coolrl/lost_cities/deep_cfr/: __init__.py  benchmark.py  cli.py  config.py  encoding.py  (+9 more)
src/coolrl/lost_cities/rust_core/: Cargo.toml  build.rs
src/coolrl/lost_cities/rust_core/src/: config.rs  engine.rs  lib.rs  service.rs  state.rs
src/coolrl/lost_cities/rust_core/tests/: e2e_engine.rs  grpc_service.rs
src/coolrl/omok/: README.md  __init__.py  arena.py  board.py  checkpoint.py  cmcts_wrapper.py  config.py  convert_onnx.py  device.py  evaluator.py  export_onnx.py  features.py  gui.py  mcts.py  mcts_backend.py  metrics.py  network.py  plot_metrics.py  plot_metrics_apple.py  replay.py  rmcts_wrapper.py  selfplay_worker.py  tensorrt_evaluator.py  torch_evaluator.py  torch_network.py  train.py
src/coolrl/omok15/: README.md  __init__.py  arena.py  board.py  cmcts_wrapper.py  config.py  convert_onnx.py  features.py  mcts.py  mcts_backend.py  mcts_types.py  openings.py  plot_metrics.py  replay.py  selfplay_worker.py  torch_evaluator.py  torch_network.py  train.py
src/coolrl/plotting/: __init__.py  fonts.py  primitives.py  theme.py
tests/omok/: test_board_size.py  test_evaluator_backend.py  test_mcts_backends_parity.py  test_tui_cli.py
(+83 files in other folders)
