[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coolrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "rich>=13.9.4",
]

[project.optional-dependencies]
poker = [
    "inquirer>=3.4.1",
]
omok = [
    "matplotlib>=3.9.0",
    "numpy>=2.4.4",
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
    "safetensors>=0.4.5",
    "torch>=2.0.0",
]
lost-cities = [
    "numpy>=1.26.0",
    "pyyaml>=6.0.3",
    "textual>=0.85.0",
]
all = [
    "coolrl[poker,omok,lost-cities]",
]

[project.scripts]
omok-train = "coolrl.omok.train:main"
omok-plot = "coolrl.omok.plot_metrics:main"
lost-cities = "coolrl.lost_cities.tui:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["coolrl*"]

[tool.setuptools.package-data]
"coolrl.omok" = ["assets/fonts/*.ttf", "assets/licenses/*.txt"]
