[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coolrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "rich>=13.9.4",
]

[project.optional-dependencies]
poker = [
    "inquirer>=3.4.1",
]
omok = [
    "matplotlib>=3.9.0",
    "numpy>=2.4.4",
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
    "safetensors>=0.4.5",
    "torch>=2.0.0",
]
omok-tui = [
    "coolrl[omok]",
    "onnxruntime>=1.18.0",
    "textual>=0.85.0",
]
omok-tui-cuda = [
    "coolrl[omok]",
    "onnxruntime-gpu>=1.18.0; platform_system != 'Darwin'",
    "textual>=0.85.0",
]
omok-tui-tensorrt = [
    "coolrl[omok]",
    "onnxruntime-gpu>=1.18.0; platform_system != 'Darwin'",
    "tensorrt>=10.0.0; platform_system != 'Darwin'",
    "textual>=0.85.0",
]
omok-tensorrt = [
    "coolrl[omok]",
    "onnx>=1.16.0; platform_system != 'Darwin'",
    "tensorrt>=10.0.0; platform_system != 'Darwin'",
]
lost-cities = [
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pygame-gui>=0.6.14",
    "pyyaml>=6.0.3",
    "torch>=2.0.0",
]
all = [
    "coolrl[poker,omok,omok-tui,lost-cities]",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pygame-gui>=0.6.14",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "torch>=2.0.0",
]

[project.scripts]
omok-train = "coolrl.omok.train:main"
omok-plot = "coolrl.omok.plot_metrics:main"
omok-tui = "coolrl.omok.tui:main"
lost-cities-gui = "coolrl.lost_cities.pygame_pvp:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["coolrl*"]

[tool.setuptools.package-data]
"coolrl.omok" = ["assets/fonts/*.ttf", "assets/licenses/*.txt"]
"coolrl.lost_cities" = ["assets/*.json", "fixtures/*.json"]
